--- a/src/Container.css
+++ b/src/Container.css
@@ -1,22 +1,3 @@
-*{
-  margin: none;
-}
-.cont{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(10, 4, 4);
-  height: 1000px;
-
-}
-.listdis{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 20px;
-  justify-content: space-evenly;
-  padding-top: 90px;
-
-}
 .header{
   display: flex;
   position: fixed;
@@ -71,6 +52,17 @@
   margin-left: 12px;
 
 }
+.listdis{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 20px;
+  justify-content: space-evenly;
+  padding-top: 90px;
+  
 
-
-
+}
+.notfound{
+  font-size: 30px;
+  font-weight: bold;
+}
